# fastapi-celery

./: README.md  main.py  pyproject.toml
alembic/: env.py
alembic/versions/: 9578ad57e964_.py  f69e92b3e58e_.py
fastapi_celery/: __init__.py  celery_utils.py  config.py  database.py
fastapi_celery/users/: models.py  tasks.py
tests/: test_fastapi_celery.py
