[tool.poetry]
name = "fastapi-celery"
version = "0.1.0"
description = ""
authors = ["Lucas F. Silva <lucaslfsls@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.88.0"
celery = "^5.2.7"
redis = "^4.4.0"
flower = "^1.2.0"
SQLAlchemy = "^1.4.46"
alembic = "^1.9.1"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
